@@ -188,7 +188,6 @@
 #define RESURRECTION FALSE
 #define SEARCH_ITEMS TRUE
 #define NOT_PERMADETH TRUE
-#define EXPLORE_MODE FALSE
 #define STAT_LOSS_ON_DEATH FALSE
 #define PK_LUCK_PENALTY 1
 #define CASTING_TIME FALSE
